--- a/.github/workflows/update_maven_index.yaml
+++ b/.github/workflows/update_maven_index.yaml
@@ -1,7 +1,8 @@
 name: 'Generate Maven Index and Commit'
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '0 3 * * 0'
+  - cron: '0 3 * * 0'
 jobs:
   build_and_commit:
     runs-on: ubuntu-latest
