--- a/.github/workflows/update_maven_index.yaml
+++ b/.github/workflows/update_maven_index.yaml
@@ -19,7 +19,6 @@ jobs:
         cat nexus-maven-repository-index | parallel -j150% --pipe --block 100M --cat grep -oaP "'[a-z][a-zA-Z0-9_.-]+\|[a-zA-Z][a-zA-Z0-9_.-]+\|([a-zA-Z0-9_.-]+\|)?(sources|pom|jar|maven-plugin|ear|ejb|ejb-client|java-source|rar|war)\|(jar|war|ear|pom|war|rar)'" {} | cut -d'|' -f1 | sed 's/$/.*/' | sort | uniq > hack/maven.default.index
         rm -rf nexus-maven-repository-index
     - name: Commit Updated maven.index
-      uses: "docker://cdssnc/auto-commit-github-action"
-      needs: "Extract Maven Index"
-      args: ":ghost: Update Maven Index"
-      secrets: ${{ secrets.GH_TOKEN }}
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: ":ghost: Update Maven Index"
