--- a/.github/workflows/update_maven_index.yaml
+++ b/.github/workflows/update_maven_index.yaml
@@ -3,9 +3,12 @@ on:
   workflow_dispatch:
   schedule:
   - cron: '0 3 * * 0'
+
 jobs:
   build_and_commit:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - name: Checkout
       uses: actions/checkout@v3
